@@ -16,6 +16,8 @@ Version 2.2.0
 * Add a few features (ephemDeltaT, ephemStellarAber, ephemClockError) useful in
   exploring spacecraft ephemeris but probably not useful for operations
 * change zoom band definition to always be USB (specify lower edge freq)
+* Reorder Mark5B tracks to accomodate bitstream masks
+* Consider two sourcs within 1 mas of each other to be the same
 
 Version 2.1.0
 ~~~~~~~~~~~~~
